[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draw-ascii"
description = " Simple webservice providing ascii art"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "jagi", email = "jan.gietzel@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi >= 0.89, <1",
  "pyfiglet==0.8.post1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Ka55i0peia/ascii_art"
Issues = "https://github.com/Ka55i0peia/ascii_art/issues"
Source = "https://github.com/Ka55i0peia/ascii_art"

[tool.hatch.version]
path = "draw_ascii/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "isort",
  "black",
  "pytest",
  "pytest-cov",
  "uvicorn>=0.20, <1"

]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=draw_ascii --cov=tests {args}"
no-cov = "cov --no-cov {args}"
launch = "uvicorn draw_ascii.main:app --reload --port 8085"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "draw_ascii/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
